<resources>
    <string name="app_name">Marques</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Registrar</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nome</string>
    <string name="salvar">Salvar </string>
    <string name="salvo_sucesso">Salvo com Sucesso!</string>
    <string name="erro_salvar">Erro ao Salvar</string>
    <string name="erro_login">Erro ao Fazer Login </string>
    <string name="tipo_evento" >Tipo Evento</string>
    <string name="criar_novo" >Criar Novo</string>
    <string name="escolha_um_tipo" >Escolha um tipo </string>
    <string name="nome_curto" >Nome muito curto</string>
    <string name="novo_evento" >Evento </string>
    <string name="tirar_foto">Tirar Foto</string>
    <string name="selecionar_galeria">Selecionar da galeria</string>
    <string name="camera_indisponivel">Câmera indisponível</string>
    <string name="foto_enviada">Foto enviada com sucesso</string>
    <string name="trabalho">Trabalho</string>
</resources>
